# haskell-automata-theory

./: .gitignore  HaskAut.cabal  LICENSE  README.md
HaskAut/Common/: GvShow.hs  Relation.hs  StackRelation.hs  Util.hs
HaskAut/FiniteAutomata/: Dfa.hs  DfaExamples.hs  DfaOperations.hs  ExampleBasics.hs  Nfa.hs  NfaEpsilon.hs  NfaExamples.hs  Regexp.hs  RegexpTests.hs  SubsetConstruction.hs  SubsetConstructionEps.hs
HaskAut/Grammars/: Cfg.hs  CfgExamples.hs  Pda.hs  PdaExamples.hs  ProdTree.hs
HaskAut/TuringMachines/: TM.hs  TMExamples.hs  UniversalTM.hs
