cabal-version:       >=1.10

name:                haskAut
version:             0.1.0.0
synopsis:            Haskell implementations of basic constructions from automata theory
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Aaron Stump
maintainer:          aaron.stump@gmail.com
-- copyright:
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    HaskAut.Common.GvShow
    HaskAut.FiniteAutomata.Dfa
    HaskAut.FiniteAutomata.DfaExamples
    HaskAut.FiniteAutomata.ExampleBasics
    HaskAut.Common.Util
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12, containers >=0.6
  -- hs-source-dirs:
  default-language:    Haskell2010
